Archive2/d4/b98f291c9791c4/output
main.cpp:20:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main()
      ^
main.cpp: In function 'int main()':
main.cpp:27:22: error: redeclaration of 'Champ Test'
      Champ Test(chose);
                      ^
main.cpp:22:12: note: 'Champ Test' previously declared here
      Champ Test;
            ^
